docs/Grammar.bnf
# expr
<expr> ::= <term> "+" <expr> | <term> "-" <expr> | term
<term> ::= <power> "*" <term> | <power> "/" <term> | power
<power> ::= <factor> "^" <power> | <factor>
<factor> ::= "(" <expr> ")" | <integer>
<integer> ::= "-" <digits> | <digits>
<digits> ::= <digit> | <digit><digit>
<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
